# evo-rs

./: Cargo.toml
.github/workflows/: deploy.yml
src/: animal.rs  camera.rs  config.rs  genome.rs  main.rs  outline.rs  plant.rs  selection.rs
tests/: simulation_test.rs
